# promptior-chatbot

./: .env.example  .gitignore  Makefile  docker-compose.yml
backend/: Dockerfile  agent.py  app.py  chain.py  config.py  pyproject.toml  rag.py  requirements.txt
doc/: project-overview.md
frontend/: Dockerfile  app.py  chainlit.md  pyproject.toml  requirements.txt
frontend/.chainlit/: config.toml
infra/: main.tf  terraform.tfvars.example  user_data.sh  variables.tf
