[project]
name = "promtior-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.2",
    "langchain==1.2.15",
    "langchain-openrouter==0.2.1",
    "faiss-cpu==1.11.0",
    "beautifulsoup4==4.13.4",
    "langchain-huggingface==1.2.2",
    "sentence-transformers==3.4.1",
    "langserve==0.3.3"
]
