[project]
name = "promtior-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.2",
    "langchain==1.2.15",
    "langserve==0.3.3",
    "sse-starlette>=2.0.0",
    "langchain-text-splitters>=0.3.11",
    "langchain-community==0.4.1",
    "bs4==0.0.2",
    "langchain-openai>=1.2.1",
    "pypdf>=6.0.0"
]
